<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:paddingBottom="20dp">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/ifv_fnd_logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:visibility="gone"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:round="0dp"
        app:srcCompat="@drawable/thumb" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fnd_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cat6"
        android:textColor="@color/color_adaptive_on_surface"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ifv_fnd_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_fnd_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cat7"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/tv_fnd_name" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fnd_bio" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_copy_fnd_num"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:layout_marginEnd="25dp"
        android:importantForAccessibility="no"
        android:text="@string/copy_fnd_number"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/div"
        app:strokeColor="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_fnd_on_map"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:text="@string/show_fnd_on_map"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@id/btn_copy_fnd_num"
        app:layout_constraintStart_toStartOf="@id/btn_copy_fnd_num"
        app:layout_constraintTop_toBottomOf="@id/btn_copy_fnd_num" />

</androidx.constraintlayout.widget.ConstraintLayout>