<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorParent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAccessibility="no"
        app:backgroundTint="@color/colorSurface"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pressedTranslationZ="0dp"
        app:rippleColor="@color/rippleForColorPrimary"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorTextTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/font_content"
        app:layout_constraintBottom_toBottomOf="@id/btn_copy"
        app:layout_constraintTop_toBottomOf="@id/fab_dismiss"
        tools:text="@string/handtalk_goal_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_copy"
        style="@style/OutlinedMaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/font_title"
        android:text="@string/copy_translation"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/defaultButtonCornerRadius"
        app:layout_constraintBottom_toTopOf="@id/btn_speak"
        app:rippleColor="@color/rippleForColorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_speak"
        style="@style/OutlinedMaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/font_title"
        android:text="@string/speak_translation"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/defaultButtonCornerRadius"
        app:layout_constraintBottom_toTopOf="@id/btn_reply"
        app:rippleColor="@color/rippleForColorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reply"
        style="@style/DefaultMaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/font_title"
        android:text="@string/reply"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/defaultButtonCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="@color/rippleForColorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>