<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:importantForAccessibility="no"
        app:backgroundTint="@color/colorSurface"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pressedTranslationZ="0dp"
        app:rippleColor="@color/rippleForColorPrimary"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toTopOf="@id/_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/allow_camera_access"
        android:textColor="@color/colorTextTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/camera_permission_desc"
        android:textColor="@color/colorTextSubtitle"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_request_camera_permission"
        style="@style/DefaultMaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:text="@string/allow"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="@dimen/defaultButtonCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>