<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorParent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorParent"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_to_left"
        app:navigationIconTint="@color/colorPrimary"
        app:title="@string/arabic_to_sign_translator"
        app:titleCentered="true"
        app:titleTextColor="@color/colorPrimary" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_a2s_translation_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorTextTitle"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/a2s_translation_player_view"
        app:layout_constraintEnd_toEndOf="@id/a2s_translation_player_view"
        app:layout_constraintStart_toStartOf="@id/a2s_translation_player_view"
        app:layout_constraintTop_toTopOf="@id/a2s_translation_player_view"
        tools:text="@string/sign_language_will_be_displayed_here" />

    <com.typ.handtalk.ui.a2s.views.A2SPlayablePlayerView
        android:id="@+id/a2s_translation_player_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:visibility="invisible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_a2s_translation_sentence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_interpreted_text"
        android:backgroundTint="#80000000"
        android:gravity="center"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorTextTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/a2s_translation_player_view"
        app:layout_constraintStart_toStartOf="@id/a2s_translation_player_view"
        app:layout_constraintTop_toBottomOf="@id/a2s_translation_player_view"
        tools:text="This will hold the sentence with found and not found words" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_a2s_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_a2s"
        android:textAlignment="viewStart"
        app:boxBackgroundColor="@color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/defaultButtonCornerRadius"
        app:boxCornerRadiusBottomStart="@dimen/defaultButtonCornerRadius"
        app:boxCornerRadiusTopEnd="@dimen/defaultButtonCornerRadius"
        app:boxCornerRadiusTopStart="@dimen/defaultButtonCornerRadius"
        app:endIconDrawable="@android:drawable/ic_btn_speak_now"
        app:endIconMode="custom"
        app:expandedHintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/btn_translate_a2s"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:maxLength="100"
            android:textAlignment="viewStart"
            android:textColor="@color/colorTextTitle" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_translate_a2s"
        style="@style/DefaultMaterialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultButtonHeight"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:importantForAccessibility="no"
        android:text="@string/translate"
        android:textColor="@color/colorOnPrimary"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="@dimen/defaultButtonCornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="@color/rippleForColorPrimary"
        app:tint="@color/colorOnPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>